Implementation of 'get_stocks_cvm_code' endpoint
